Added TO_JSON in agavedancer/lib/Agave/Client/Object/Job.pm

--- a/agavedancer/views/app.tt
+++ b/agavedancer/views/app.tt
@@ -30,7 +30,7 @@
 		</dl>
 	</p>
 [% ELSE %]
-	No application found for term: '[% name |html %]'.
+	No application found for term: '[% id |html %]'.
 [% END %]
 
 	</div>
