--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -17,7 +17,15 @@ html, body {
 	background: #111;
 }
 
-.sidebar {
+.leftbar {
+	padding: 0.3rem;
+	width: 15rem;
+	margin: 0.1rem;
+	background: #2980B9;
+	overflow: auto;
+}
+
+.rightbar {
 	padding: 0.3rem;
 	width: 15rem;
 	margin: 0.1rem;
