update header and appsForm

--- a/agavedancer/public/styles/header.less
+++ b/agavedancer/public/styles/header.less
@@ -4,14 +4,24 @@
 .navbar {
 	min-height: 30px;
 	margin: 0;
+	padding: 0;
+	border-radius: 0px;
+	text-align: center;
+	line-height: 30 px;
+	vertical-align: middle;
+}
+.navbar-nav {
+	float:none;
+}
+.navbar-nav > li {
+	display:inline-block;
+	float:none;
+	margin:0 10px;
+	vertical-align: middle;
 }
 
 .navbar-nav > li > a {
-	padding-top: 2px;
-	padding-bottom: 2px;
-	line-height: 28px;
-	text-align: center;
-	vertical-align: middle;
+	padding: 0;
 }
 
 
