--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -15,7 +15,7 @@ html, body {
 	padding: 0.3rem;
 	width: 15rem;
 	margin: 0.1rem;
-	background: #2980B9;
+	background: #d7f4f4;
 	overflow: auto;
 }
 
@@ -23,7 +23,7 @@ html, body {
 	padding: 0.3rem;
 	width: 15rem;
 	margin: 0.1rem;
-	background: #2980B9;
+	background: #d7f4f4;
 	overflow: auto;
 }
 
