--- a/agavedancer/public/styles/welcome.less
+++ b/agavedancer/public/styles/welcome.less
@@ -5,9 +5,17 @@
 
 	.section {
 		font-size: 18px;
-
 		.list {
 			font-size: 16px;
 		}
+	}
+	.mylogo {
+    		display: inline-block;
+    		margin-left: auto;
+    		margin-right: auto;
+	}
+
+	#myimages{
+    		text-align:center;
 	}
 }
