--- a/agavedancer/public/styles/header.less
+++ b/agavedancer/public/styles/header.less
@@ -1,22 +1,26 @@
-@navbar-default-link-color: #FFFFFF;
+@navbar-default-link-color: #f1f1f1;
+@navbar-default-link-hover-color: #ffffff;
 @navbar-default-bg: #009BAD;
 
 .navbar {
-	min-height: 30px;
+	min-height: 32px;
 	margin: 0;
 	padding: 0;
 	border-radius: 0px;
 	text-align: center;
-	line-height: 30 px;
+	line-height: 32 px;
 	vertical-align: middle;
 }
 .navbar-nav {
 	float:none;
+	margin: 0;
+	padding: 0;
 }
 .navbar-nav > li {
 	display:inline-block;
 	float:none;
 	margin:0 10px;
+	padding: 0;
 	vertical-align: middle;
 }
 
