add form validation

--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -33,3 +33,15 @@ html, body {
 	background: #ECF0F1;
 	overflow: auto;
 }
+
+.apps-panel-title {
+	margin-top: 0;
+	margin-bottom: 0;
+	color: inherit;
+}
+
+.jobs-panel-title {
+	margin-top: 0;
+	margin-bottom: 0;
+	color: inherit;
+}
