update job status in workflow diagram

--- a/agavedancer/public/styles/mermaid.less
+++ b/agavedancer/public/styles/mermaid.less
@@ -4,8 +4,11 @@
 .edgeLabel {
 	color: #FF4500;
 }
-.appsNode rect {
+.appsNode1 rect {
 	fill: #008B8B;
+}
+.appsNode2 rect {
+	fill: #00FF00;
 }
 .fileNode rect {
 	fill: #FF4500
