fix diagram update problem

--- a/agavedancer/public/styles/mermaid.less
+++ b/agavedancer/public/styles/mermaid.less
@@ -4,10 +4,10 @@
 .edgeLabel {
 	color: #FF4500;
 }
-.appsNode1 rect {
+.appsNodePending rect {
 	fill: #008B8B;
 }
-.appsNode2 rect {
+.appsNodeFinished rect {
 	fill: #00FF00;
 }
 .fileNode rect {
