--- a/agavedancer/public/styles/mermaid.less
+++ b/agavedancer/public/styles/mermaid.less
@@ -4,12 +4,15 @@
 .edgeLabel {
 	color: #FF4500;
 }
-.appsNodePending rect {
-	fill: #008B8B;
+.appsNodePENDING rect {
+	fill: #fffac6;
 }
-.appsNodeFinished rect {
-	fill: #00FF00;
+.appsNodeFINISHED rect {
+	fill: #bcf5a9;
+}
+.appsNodeRUNNING rect {
+	fill: #728fce;
 }
 .fileNode rect {
-	fill: #FF4500
+	fill: #FF4500;
 }
