Optimized CSS in all three panels

--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -28,6 +28,18 @@ html, body {
 	overflow: auto;
 }
 
+.rightbar .panel {
+	margin-bottom: 5px;
+	text-align: left;
+}
+
+.rightbar .btn {
+	padding-left: 0px;
+	padding-right: 0px;
+	margin-left: -6px;
+	margin-right: 10px;
+}
+
 .main {
 	padding: 0.3rem;
 	margin: 0;
