--- a/agavedancer/public/styles/bootstrap-3.3.5/button-groups.less
+++ b/agavedancer/public/styles/bootstrap-3.3.5/button-groups.less
@@ -33,19 +33,25 @@
 
 // Optional: Group multiple button groups together for a toolbar
 .btn-toolbar {
-  margin-left: -5px; // Offset the first child's margin
+  margin-left: -1px; // Offset the first child's margin
   &:extend(.clearfix all);
 
   .btn,
   .btn-group,
   .input-group {
-    float: left;
+    float: right;
   }
   > .btn,
   > .btn-group,
   > .input-group {
-    margin-left: 5px;
+    margin-left: 1px;
+    margin-right: 1px;
   }
+}
+
+.btn-toolbar > .btn:first-child {
+   margin-left: -1px;
+   float: left;
 }
 
 .btn-group > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
