--- a/agavedancer/public/styles/panels.less
+++ b/agavedancer/public/styles/panels.less
@@ -7,9 +7,9 @@
 .panel {
   margin-bottom: @line-height-computed;
   background-color: @panel-bg;
-//  border: 1px solid transparent;
-//  border-radius: @panel-border-radius;
-//  .box-shadow(0 1px 1px rgba(0,0,0,.05));
+  border: 0;
+  border-radius: 0px;
+  box-shadow: none;
 }
 
 // Panel contents
@@ -62,11 +62,10 @@
 .panel {
   > .list-group,
   > .panel-collapse > .list-group {
-    margin-bottom: 0;
-
+    margin-bottom: -18px;
     .list-group-item {
       border-width: 1px 0;
-      border-radius: 0;
+      border-radius: 0px;
     }
 
     // Add border top radius for first one
