--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -33,11 +33,20 @@ html, body {
 	text-align: left;
 }
 
+.rightbar .btn-toolbar {
+	background: #eee;
+	padding-left: 5px;
+}
+
 .rightbar .btn {
 	padding-left: 0px;
 	padding-right: 0px;
 	margin-left: -6px;
 	margin-right: 10px;
+	font-size: 15px;
+	max-width: 170px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .main {
