--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -38,6 +38,10 @@ html, body {
 	padding-left: 5px;
 }
 
+.rightbar .list-group-item {
+	margin-left: -7px;
+}
+
 .rightbar .btn {
 	padding-left: 0px;
 	padding-right: 0px;
