--- a/agavedancer/views/index.tt
+++ b/agavedancer/views/index.tt
@@ -1,14 +1,5 @@
 		<div id="content"></div>
 		<script type="text/javascript">
-		var _config={
-			app_id: '[% app_id || "" %]',
-			page_id: '[% page_id || "" %]',
-			wf_id: '[% wf_id || "" %]',
-			setting: {
-				[% FOREACH pair IN setting.pairs %]
-				[% pair.key %]: '[% pair.value %]',
-				[%- END %]
-			}
-		};
+		var _config=[% config %];
 		</script>
 		<script src="javascripts/bundle.js"></script>
