Added code to truncate long file/app names (label) in workflow diagram and made label slightly bigger. Need to write more mermaid code (?) to asjust the srat position of label relative to the left edge of rect

--- a/agavedancer/public/styles/mermaid.less
+++ b/agavedancer/public/styles/mermaid.less
@@ -2,7 +2,14 @@
 @border2: #6eaa49;
 @appNodeColor: #FFF;
 
-.mermaid .label { color:#333}
+.mermaid .label {
+  display: inline;
+  padding: .02em .06em .03em;
+  font-size: 81%;
+  font-weight: bold;
+  border-radius: .05em;
+  color:#333
+}
 .mermaid .appsNodePENDING .label {color: @appNodeColor}
 .mermaid .appsNodeRUNNING .label {color: @appNodeColor}
 .mermaid .appsNodeFINISHED .label {color: @appNodeColor}
