Updated dagre-d3/lib/render.js (paddingLeft: 6, paddingRight: 16) to allow larger node labels (90%). This also makes label not always centered

--- a/agavedancer/public/styles/mermaid.less
+++ b/agavedancer/public/styles/mermaid.less
@@ -5,7 +5,7 @@
 .mermaid .label {
   display: inline;
   padding: .02em .06em .03em;
-  font-size: 81%;
+  font-size: 90%;
   font-weight: bold;
   border-radius: .05em;
   color:#333
@@ -25,6 +25,8 @@
 	fill: #f4c20d;
 	stroke: #f4880d;
 	stroke-width: 2px;
+	paddingLeft: 4px;
+	paddingRight: 16px;
 }
 .appsNodeFINISHED rect {
 	fill: #3cba54;
