Optimized CSS for app forms

--- a/agavedancer/public/styles/forms.less
+++ b/agavedancer/public/styles/forms.less
@@ -21,3 +21,10 @@
   padding: 4px 5px;
   font-size: 12px;
 }
+
+.btn-group> .btn {
+  padding: 2px 10px;
+  font-size: 12px;
+  border-radius: 0;
+  margin-top: -8px;
+}
