--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -11,6 +11,11 @@ html, body {
 	min-height: 100%;
 }
 
+th {
+	font-weight: normal;
+ 	padding-right: 10px;
+}
+
 .leftbar {
 	padding: 0;
 	padding-left: 15px;
@@ -61,6 +66,21 @@ html, body {
 	overflow: auto;
 	border-left: solid #999 1px;
 	border-right: solid #999 1px;
+}
+
+.main .panel-default {
+	border-color: #ffcc80;
+}
+
+.main .panel-heading {
+	padding: 2px 9px;
+	font-size: 12px;
+	font-weight: bold;
+}
+
+.main .panel-default>.panel-heading {
+	background-color: #ffcc80;
+	border-color: #ffcc80;
 }
 
 .apps-panel-title {
