Removed box-shadow for buttons and list-group-item

--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -16,10 +16,30 @@ th {
  	padding-right: 10px;
 }
 
+.btn:active,
+.btn:focus,
+.btn.active,
+.btn:focus:active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.list-group-item:active,
+.list-group-item:focus,
+.list-group-item.active,
+.list-group-item:focus:active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .leftbar {
 	padding: 0;
 	padding-left: 15px;
-	width: 15rem;
+	width: 16.5rem;
 	margin: 0;
 	background: #d7f4f4;
 	overflow: auto;
@@ -31,7 +51,7 @@ th {
 
 .rightbar {
 	padding: 0;
-	width: 15rem;
+	width: 16.5rem;
 	margin: 0;
 	background: #d7f4f4;
 	overflow: auto;
@@ -58,7 +78,7 @@ th {
 	margin-left: -10px;
 	margin-right: 10px;
 	font-size: 15px;
-	max-width: 160px;
+	max-width: 170px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
