--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -5,7 +5,7 @@
 }
 
 html, body {
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 1.5rem;
 	height: 100%;
 	min-height: 100%;
@@ -76,7 +76,6 @@ th {
 	padding-right: 0px;
 	margin-left: -10px;
 	margin-right: 10px;
-	font-size: 15px;
 	max-width: 170px;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -98,13 +97,11 @@ th {
 .main .panel-default,
 .modal-body .panel-default {
 	border-color: #ffcc80;
-	font-size: 12px;
 }
 
 .main .panel-heading,
 .modal-body .panel-heading {
 	padding: 2px 9px;
-	font-size: 12px;
 	font-weight: bold;
 }
 
@@ -128,7 +125,7 @@ th {
 	background: #eee;
 	border-bottom: solid #999 1px;
 	margin: 0;
-	padding: 0;
+	padding-top: 3px;
 	padding-right: 10px;
 	padding-left: 10px;
 	font-weight: bold;
