Fixed rightbar style for long app names

--- a/agavedancer/public/styles/panels.less
+++ b/agavedancer/public/styles/panels.less
@@ -12,6 +12,11 @@
   box-shadow: none;
 }
 
+.rightbar .panel {
+  border: 0;
+  border-radius: 0;
+}
+
 // Panel contents
 .panel-body {
   padding: @panel-body-padding;
