--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -68,17 +68,22 @@ th {
 
 .rightbar .list-group-item {
 	margin-left: -7px;
+	padding: 0 0;
 	word-wrap: break-word;
 }
 
 .rightbar .btn {
 	padding-left: 0px;
 	padding-right: 0px;
-	margin-left: -10px;
-	margin-right: 10px;
-	max-width: 170px;
+	margin-left: -16px;
+	margin-right: 16px;
+	max-width: 145px;
 	overflow: hidden;
 	text-overflow: ellipsis;
+}
+
+.rightbar .btn-toolbar>.btn:first-child {
+	margin-left: 5px;
 }
 
 .main {
