Improved workflow building form

--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -9,6 +9,7 @@ html, body {
 	line-height: 1.5rem;
 	height: 100%;
 	min-height: 100%;
+	overflow: hidden;
 }
 
 th {
@@ -75,15 +76,15 @@ th {
 .rightbar .btn {
 	padding-left: 0px;
 	padding-right: 0px;
-	margin-left: -16px;
-	margin-right: 16px;
+	margin-left: -21px;
+	margin-right: 21px;
 	max-width: 145px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
 
 .rightbar .btn-toolbar>.btn:first-child {
-	margin-left: 5px;
+	margin-left: 9px;
 }
 
 .main {
