Add dynamic diagram size for small workflows

--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -68,8 +68,8 @@ th {
 }
 
 .rightbar .list-group-item {
-	margin-left: -7px;
-	padding: 0 0;
+	margin-left: 0;
+	padding: 0 1px;
 	word-wrap: break-word;
 }
 
@@ -84,7 +84,7 @@ th {
 }
 
 .rightbar .btn-toolbar>.btn:first-child {
-	margin-left: 9px;
+	margin-left: -2px;
 }
 
 .main {
