--- a/agavedancer/public/styles/mermaid.less
+++ b/agavedancer/public/styles/mermaid.less
@@ -2,6 +2,22 @@
 @border2: #6eaa49;
 @appNodeColor: #FFF;
 
+.twoNodes {
+  width: 700px
+}
+
+.threeNodes {
+  width: 920px
+}
+
+.fourNodes {
+  width: 1150px
+}
+
+.fiveNodes {
+  width: 1350px
+}
+
 .mermaid .label {
   display: inline;
   padding: .02em .06em .03em;
