--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -21,6 +21,16 @@ th {
  	padding-right: 10px;
 }
 
+.info-message {
+    background-color: #f0f7ff;
+    border: 1px solid #009bad;
+    border-radius: 3px;
+    padding: 5px;
+    padding-left: 6px;
+    margin: 5px 5px 6px 5px;
+    min-height: 15px;
+}
+
 .btn:active,
 .btn:focus,
 .btn.active,
@@ -84,8 +94,10 @@ th {
 .rightbar .btn {
 	padding-left: 0px;
 	padding-right: 0px;
-	margin-left: -10px;
-	margin-right: 10px;
+	padding-top: 0px;
+	padding-bottom: 3px;
+	margin-left: 0px;
+	margin-right: 2px;
 	max-width: 145px;
 	overflow: hidden;
 	text-overflow: ellipsis;
