--- a/agavedancer/public/styles/button-groups.less
+++ b/agavedancer/public/styles/button-groups.less
@@ -19,3 +19,10 @@
     margin-left: 0;
     margin-bottom: 2px;
 }
+
+.btn {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
