fix bug in url in email

--- a/agavedancer/views/job.tt
+++ b/agavedancer/views/job.tt
@@ -10,8 +10,8 @@
 			<dt>Submitted on: </dt><dd>[% date.format(job.submitTime) %]</dd>
 			<dt>Started on: </dt><dd>[% date.format(job.startTime) %]</dd>
 			<dt>Finished on: </dt><dd>[% date.format(job.endTime) %]</dd>
-			[%- archivePath=job.outputPath.replace(job.owner, setting.archive_path); archiveSystem=setting.archive_system; link_url=setting.output_url.$archiveSystem _ '/' _ archivePath; -%]
-			<dt>Results: </dt><dd>[% IF ('FINISHED' == job.status || 'FAILED' == job.status) %]<a href="[% link_url | url %]">[% link_url %]</a>[% END %]</dd>
+			[%- archivePath=job.outputPath.replace(job.owner, settings.archive_path); archiveSystem=settings.archive_system; href=settings.output_url.$archiveSystem; href=href.replace('__system__', archiveSystem); href=href.replace('__path__',  archivePath); -%]
+			<dt>Results: </dt><dd>[% IF ('FINISHED' == job.status || 'FAILED' == job.status) %]<a href="[% href | url %]">[% href %]</a>[% END %]</dd>
 		</dl>
 	</p>
 [% ELSE %]
