add react table

--- a/agavedancer/public/styles/mermaid.less
+++ b/agavedancer/public/styles/mermaid.less
@@ -88,3 +88,8 @@
         font-family: 'trebuchet ms', verdana, arial;
         font-size: 18px;
 }
+
+.mermaidTooltip {
+	z-index: 1151 !important;
+	position: relative;
+}
