Search form CSS optimized

--- a/agavedancer/public/styles/react-bootstrap-table.less
+++ b/agavedancer/public/styles/react-bootstrap-table.less
@@ -1,8 +1,13 @@
 /*editor error animate*/
 /*@import "~toastr/build/toastr.min.css";*/
 
+.form-group-sm .form-control {
+  height: 24px;
+}
+
 .react-bs-table-container .react-bs-table-search-form {
   margin-bottom: 0;
+  margin-top: -9px;
 }
 
 .react-bs-table-bordered {
