Minor fix for workflow diagram

--- a/agavedancer/public/styles/variables.less
+++ b/agavedancer/public/styles/variables.less
@@ -1,4 +1,5 @@
 @panel-body-padding:	5px;
+@modal-inner-padding:	5px;
 @form-group-margin-bottom:       5px;
 @modal-lg:	99vw;
 @state-warning-text:	#333;
