--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -46,6 +46,15 @@ th {
           box-shadow: none;
 }
 
+.btn-info,
+.btn-info:hover,
+.btn-info:active,
+.btn-info:focus:active,
+.btn-info:visited {
+    margin-bottom: 4px;
+    margin-right: 2px;
+}
+
 .list-group-item:active,
 .list-group-item:focus,
 .list-group-item.active,
@@ -103,7 +112,7 @@ th {
 	padding-bottom: 3px;
 	margin-left: 0px;
 	margin-right: 2px;
-	max-width: 145px;
+	max-width: 141px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
