Minor changes on front page and help page

--- a/agavedancer/public/styles/welcome.less
+++ b/agavedancer/public/styles/welcome.less
@@ -10,6 +10,9 @@
 	}
 
 	#myimages{
-    		text-align:center;
+        	padding-top:15px;
+        	padding-bottom:15px;
+        	border-top:1px solid #cecece;
+		text-align:center;
 	}
 }
